KMotion_dotNet/DM RS274 Interpreter/KM_Interpreter_SetupParams_Interop.cs


            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern int KM_dotnet_Interop_GCodeInterpreter_Get_CurrentMotionMode(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_CurrentMotionMode(IntPtr handle, int value);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern int KM_dotnet_Interop_GCodeInterpreter_Get_Active_GCode(IntPtr handle, int index);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern int KM_dotnet_Interop_GCodeInterpreter_Get_Active_MCode(IntPtr handle, int index);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern double KM_dotnet_Interop_GCodeInterpreter_Get_Active_Setting(IntPtr handle, int index);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern int KM_dotnet_Interop_GCodeInterpreter_Get_DistanceMode(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_DistanceMode(IntPtr handle, int value);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern int KM_dotnet_Interop_GCodeInterpreter_Get_FeedMode(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_FeedMode(IntPtr handle, int value);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern int KM_dotnet_Interop_GCodeInterpreter_Get_FloodCoolantOn(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_FloodCoolantOn(IntPtr handle, int value);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern int KM_dotnet_Interop_GCodeInterpreter_Get_MistCoolantOn(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_MistCoolantOn(IntPtr handle, int value);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern int KM_dotnet_Interop_GCodeInterpreter_Get_BlockDelete(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_BlockDelete(IntPtr handle, int value);




            //Tooling Params  

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern int KM_dotnet_Interop_GCodeInterpreter_Get_CurrentToolSlot(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_CurrentToolSlot(IntPtr handle, int value);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern int KM_dotnet_Interop_GCodeInterpreter_Get_SelectedToolSlot(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_SelectedToolSlot(IntPtr handle, int value);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern double KM_dotnet_Interop_GCodeInterpreter_Get_ToolLengthOffset(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_ToolLengthOffset(IntPtr handle, double value);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern int KM_dotnet_Interop_GCodeInterpreter_Get_ToolLengthOffsetIndex(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_ToolLengthOffsetIndex(IntPtr handle, int value);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern int KM_dotnet_Interop_GCodeInterpreter_Get_RadiusComp(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_RadiusComp(IntPtr handle, int value);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern double KM_dotnet_Interop_GCodeInterpreter_Get_RadiusCompValue(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_RadiusCompValue(IntPtr handle, double value);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern int KM_dotnet_Interop_GCodeInterpreter_Get_RadiusCompSide(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_RadiusCompSide(IntPtr handle, int value);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern int KM_dotnet_Interop_GCodeInterpreter_Get_AllowSpindleSpeedOverride(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_AllowSpindleSpeedOverride(IntPtr handle, int value);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern int KM_dotnet_Interop_GCodeInterpreter_Get_SpindleDirection(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_SpindleDirection(IntPtr handle, int value);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern double KM_dotnet_Interop_GCodeInterpreter_Get_SpindleSpeed(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_SpindleSpeed(IntPtr handle, double value);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_SetTool(IntPtr handle, int id, double length, double diameter);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_GetTool(IntPtr handle, int id, ref double length, ref double diameter);


            //Fixed Cycle Params     

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern double KM_dotnet_Interop_GCodeInterpreter_Get_Cycle_CC(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_Cycle_CC(IntPtr handle, double value);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern double KM_dotnet_Interop_GCodeInterpreter_Get_Cycle_I(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_Cycle_I(IntPtr handle, double value);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern double KM_dotnet_Interop_GCodeInterpreter_Get_Cycle_J(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_Cycle_J(IntPtr handle, double value);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern double KM_dotnet_Interop_GCodeInterpreter_Get_Cycle_K(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_Cycle_K(IntPtr handle, double value);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern double KM_dotnet_Interop_GCodeInterpreter_Get_Cycle_L(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_Cycle_L(IntPtr handle, double value);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern double KM_dotnet_Interop_GCodeInterpreter_Get_Cycle_P(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_Cycle_P(IntPtr handle, double value);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern double KM_dotnet_Interop_GCodeInterpreter_Get_Cycle_Q(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_Cycle_Q(IntPtr handle, double value);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern double KM_dotnet_Interop_GCodeInterpreter_Get_Cycle_R(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_Cycle_R(IntPtr handle, double value);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern double KM_dotnet_Interop_GCodeInterpreter_Get_Cycle_Z(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_Cycle_Z(IntPtr handle, double value);

            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern int KM_dotnet_Interop_GCodeInterpreter_Get_Cycle_RetractMode(IntPtr handle);
            [DllImport("KMotion_dotNet_Interop.dll")]
            static extern void KM_dotnet_Interop_GCodeInterpreter_Set_Cycle_RetractMode(IntPtr handle, int value);

            #endregion
        }
    }
}
